--- a/index.html
+++ b/index.html
@@ -4,13 +4,12 @@
 <meta charset="UTF-8">
 <title>PDV Barbearia</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
 <script src="jspdf.umd.min.js"></script>
 
 <style>
 body{
   margin:0;
-  font-family:Arial,Helvetica,sans-serif;
+  font-family:Arial;
   background:url("https://images.unsplash.com/photo-1503951914875-452162b0f3f1");
   background-size:cover;
   background-position:center;
@@ -21,20 +20,16 @@ body{
   background:rgba(0,0,0,.4);
   display:flex;flex-direction:column;align-items:center;padding-top:20px
 }
-.menu button{
-  background:none;border:none;color:#f1c40f;
-  font-size:22px;margin:15px 0;cursor:pointer
-}
+.menu button{background:none;border:none;color:#f1c40f;font-size:22px;margin:15px 0;cursor:pointer}
 .content{margin-left:90px;padding:20px;color:#fff}
 .section{display:none}
 .section.active{display:block}
-input,select,button{
-  padding:8px;border-radius:6px;border:none;margin:4px 0
-}
+input,select,button{padding:8px;border-radius:6px;border:none;margin:4px 0}
 button{cursor:pointer;font-weight:bold}
 table{width:100%;border-collapse:collapse}
 th,td{border-bottom:1px solid rgba(255,255,255,.2);padding:6px}
 .total{font-size:20px;color:#2ecc71}
+.neg{color:#e74c3c}
 canvas{background:#111;border-radius:8px;margin-top:10px}
 </style>
 </head>
@@ -44,6 +39,7 @@ canvas{background:#111;border-radius:8px;margin-top:10px}
 
 <div class="menu">
   <button onclick="show('pdv')">💈</button>
+  <button onclick="show('agenda')">🕒</button>
   <button onclick="show('clientes')">👤</button>
   <button onclick="show('planos')">💳</button>
   <button onclick="show('produtos')">📦</button>
@@ -61,11 +57,8 @@ canvas{background:#111;border-radius:8px;margin-top:10px}
   <input id="valorAbertura" type="number" placeholder="Valor abertura do caixa">
   <button onclick="abrirCaixa()">Abrir Caixa</button>
 
-  <hr>
-
   <select id="cliente"></select>
   <select id="produto"></select>
-
   <select id="pagamento">
     <option value="dinheiro">Dinheiro</option>
     <option value="pix">Pix</option>
@@ -84,6 +77,17 @@ canvas{background:#111;border-radius:8px;margin-top:10px}
   <div id="resumoCaixa"></div>
 </div>
 
+<!-- AGENDA -->
+<div id="agenda" class="section">
+  <h2>Agenda (15 em 15 min)</h2>
+  <input type="date" id="dataAgenda">
+  <select id="horaAgenda"></select>
+  <select id="clienteAgenda"></select>
+  <select id="servicoAgenda"></select>
+  <button onclick="salvarAgendamento()">Agendar</button>
+  <ul id="listaAgenda"></ul>
+</div>
+
 <!-- CLIENTES -->
 <div id="clientes" class="section">
   <h2>Clientes</h2>
@@ -98,7 +102,7 @@ canvas{background:#111;border-radius:8px;margin-top:10px}
   <h2>Planos</h2>
   <input id="nomePlano" placeholder="Nome">
   <input id="valorPlano" type="number" placeholder="Valor">
-  <input id="qtdPlano" type="number" placeholder="Qtd serviços">
+  <input id="qtdPlano" type="number" placeholder="Qtd">
   <select id="tipoPlano"></select>
   <button onclick="salvarPlano()">Salvar</button>
   <ul id="listaPlanos"></ul>
@@ -129,15 +133,12 @@ canvas{background:#111;border-radius:8px;margin-top:10px}
 <!-- RELATÓRIO MENSAL -->
 <div id="mensal" class="section">
   <h2>Relatório Mensal</h2>
-
   <input type="month" id="mesRelatorio">
   <button onclick="gerarRelatorioMensal()">Gerar</button>
-  <button onclick="pdfRelatorioMensal()">📄 PDF Mensal</button>
+  <button onclick="pdfRelatorioMensal()">📄 PDF</button>
 
   <div id="resumoMensal"></div>
-
-  <canvas id="graficoMensal" width="320" height="180"></canvas>
-
+  <canvas id="graficoMensal" width="360" height="200"></canvas>
   <ul id="listaMensal"></ul>
 </div>
 
@@ -145,192 +146,148 @@ canvas{background:#111;border-radius:8px;margin-top:10px}
 </div>
 
 <script>
+/* ========= FUNÇÃO SHOW ========= */
 function show(id){
   document.querySelectorAll(".section").forEach(s=>s.classList.remove("active"));
   document.getElementById(id).classList.add("active");
 }
 
+/* ========= DB ========= */
 const rawDB = JSON.parse(localStorage.getItem("db")||"{}");
 const db = {
-  clientes: rawDB.clientes || [],
-  planos: rawDB.planos || [],
-  produtos: rawDB.produtos || [
-    {nome:"Corte",valor:30,tipo:"servico"},
-    {nome:"Barba",valor:20,tipo:"servico"}
-  ],
-  vendas: rawDB.vendas || [],
-  despesas: rawDB.despesas || [],
-  caixa: rawDB.caixa || {aberto:false,abertura:0}
+  clientes: rawDB.clientes||[],
+  planos: rawDB.planos||[],
+  produtos: rawDB.produtos||[],
+  vendas: rawDB.vendas||[],
+  despesas: rawDB.despesas||[],
+  agenda: rawDB.agenda||[],
+  caixa: rawDB.caixa||{aberto:false,abertura:0}
 };
 
 let carrinho=[];
-
 function save(){localStorage.setItem("db",JSON.stringify(db));}
 
-/* ===== CAIXA ===== */
+/* ========= AGENDA 15/15 ========= */
+function gerarHorarios15(){
+  let h=[];
+  for(let i=8;i<=20;i++){
+    ["00","15","30","45"].forEach(m=>{
+      h.push(`${String(i).padStart(2,"0")}:${m}`);
+    });
+  }
+  return h;
+}
+function salvarAgendamento(){
+  if(db.agenda.find(a=>a.data===dataAgenda.value&&a.hora===horaAgenda.value))
+    return alert("Horário ocupado");
+  db.agenda.push({
+    data:dataAgenda.value,
+    hora:horaAgenda.value,
+    cliente:clienteAgenda.value,
+    servico:servicoAgenda.value
+  });
+  save();renderAgenda();
+}
+function renderAgenda(){
+  listaAgenda.innerHTML=db.agenda
+    .filter(a=>a.data===dataAgenda.value)
+    .map(a=>`<li>${a.hora} | ${a.cliente} | ${a.servico}</li>`).join("");
+}
+
+/* ========= CAIXA ========= */
 function abrirCaixa(){
   db.caixa.aberto=true;
-  db.caixa.abertura=Number(valorAbertura.value||0);
+  db.caixa.abertura=+valorAbertura.value||0;
   db.vendas=[];db.despesas=[];carrinho=[];
   save();render();
 }
 function fecharCaixa(){
-  const pix=db.vendas.filter(v=>v.pagamento==="pix").reduce((s,v)=>s+v.total,0);
-  const cartao=db.vendas.filter(v=>v.pagamento==="cartao").reduce((s,v)=>s+v.total,0);
-  const dinheiro=db.vendas.filter(v=>v.pagamento==="dinheiro").reduce((s,v)=>s+v.total,0);
+  const total=db.vendas.reduce((s,v)=>s+v.total,0);
   const desp=db.despesas.reduce((s,d)=>s+d.valor,0);
-  const saldo=db.caixa.abertura+pix+cartao+dinheiro-desp;
-
-  resumoCaixa.innerHTML=`
-    <h3>Resumo do Caixa</h3>
-    <p>Abertura: R$ ${db.caixa.abertura.toFixed(2)}</p>
-    <p>Pix: R$ ${pix.toFixed(2)}</p>
-    <p>Cartão: R$ ${cartao.toFixed(2)}</p>
-    <p>Dinheiro: R$ ${dinheiro.toFixed(2)}</p>
-    <p>Despesas: R$ ${desp.toFixed(2)}</p>
-    <p class="total">Saldo Final: R$ ${saldo.toFixed(2)}</p>
-  `;
+  const saldo=db.caixa.abertura+total-desp;
+  resumoCaixa.innerHTML=`<p>Saldo Final: R$ ${saldo.toFixed(2)}</p>`;
   db.caixa.aberto=false;
   save();render();
 }
 
-/* ===== PDV ===== */
+/* ========= PDV ========= */
 function addItem(){
-  const [nome,valor,tipo]=produto.value.split("|");
-  const cli=db.clientes.find(c=>c.nome===cliente.value);
-
-  if(cli && cli.plano && tipo==="servico"){
-    const plano=db.planos.find(p=>p.nome===cli.plano && p.tipo===nome);
-    if(!plano) return alert("Serviço não permitido no plano");
-    if(cli.saldo>0){
-      cli.saldo--; save();render();
-      return alert("Plano usado. Saldo: "+cli.saldo);
-    }
-  }
-
+  const [nome,valor]=produto.value.split("|");
   carrinho.push({nome,valor:+valor});
   renderCarrinho();
 }
 function finalizarVenda(){
-  if(!carrinho.length)return;
   const total=carrinho.reduce((s,i)=>s+i.valor,0);
-  db.vendas.push({
-    data:new Date().toLocaleString(),
-    total,
-    pagamento:pagamento.value
-  });
+  db.vendas.push({data:new Date().toLocaleString(),total,pagamento:pagamento.value});
   carrinho=[];save();render();
 }
 function renderCarrinho(){
-  let html="<tr><th>Item</th><th>Valor</th></tr>",soma=0;
-  carrinho.forEach(i=>{
-    html+=`<tr><td>${i.nome}</td><td>R$ ${i.valor.toFixed(2)}</td></tr>`;
-    soma+=i.valor;
-  });
-  carrinho.innerHTML=html;
-  total.innerText=soma.toFixed(2);
+  let h="<tr><th>Item</th><th>Valor</th></tr>",s=0;
+  carrinho.forEach(i=>{h+=`<tr><td>${i.nome}</td><td>R$ ${i.valor.toFixed(2)}</td></tr>`;s+=i.valor});
+  carrinho.innerHTML=h;total.innerText=s.toFixed(2);
 }
 
-/* ===== CRUD ===== */
-function salvarCliente(){
-  const plano=db.planos.find(p=>p.nome===planoCliente.value);
-  db.clientes.push({nome:nomeCliente.value,plano:plano?plano.nome:null,saldo:plano?plano.qtd:0});
-  save();render();
-}
-function salvarPlano(){
-  db.planos.push({nome:nomePlano.value,valor:+valorPlano.value,qtd:+qtdPlano.value,tipo:tipoPlano.value});
-  save();render();
-}
-function salvarProduto(){
-  db.produtos.push({nome:nomeProd.value,valor:+valorProd.value,tipo:tipoProd.value});
-  save();render();
-}
-function salvarDespesa(){
-  db.despesas.push({desc:descDespesa.value,valor:+valorDespesa.value,data:new Date().toLocaleString()});
-  save();render();
-}
+/* ========= CRUD ========= */
+function salvarCliente(){db.clientes.push({nome:nomeCliente.value});save();render();}
+function salvarPlano(){db.planos.push({nome:nomePlano.value,valor:+valorPlano.value,qtd:+qtdPlano.value,tipo:tipoPlano.value});save();render();}
+function salvarProduto(){db.produtos.push({nome:nomeProd.value,valor:+valorProd.value,tipo:tipoProd.value});save();render();}
+function salvarDespesa(){db.despesas.push({desc:descDespesa.value,valor:+valorDespesa.value,data:new Date().toLocaleString()});save();render();}
 
-/* ===== RELATÓRIO MENSAL + GRÁFICO ===== */
+/* ========= RELATÓRIO MENSAL + GRÁFICO ========= */
 function gerarRelatorioMensal(){
-  const mes=mesRelatorio.value;
-  if(!mes)return;
-  const [ano,m]=mes.split("-");
-
-  const vendas=db.vendas.filter(v=>{
-    const d=new Date(v.data);
-    return d.getFullYear()==ano&&(d.getMonth()+1)==m;
-  });
-
-  const pix=vendas.filter(v=>v.pagamento==="pix").reduce((s,v)=>s+v.total,0);
-  const cartao=vendas.filter(v=>v.pagamento==="cartao").reduce((s,v)=>s+v.total,0);
-  const dinheiro=vendas.filter(v=>v.pagamento==="dinheiro").reduce((s,v)=>s+v.total,0);
+  const [ano,m]=mesRelatorio.value.split("-");
+  const vendas=db.vendas.filter(v=>{const d=new Date(v.data);return d.getFullYear()==ano&&(d.getMonth()+1)==m});
+  const despesas=db.despesas.filter(d=>{const dt=new Date(d.data);return dt.getFullYear()==ano&&(dt.getMonth()+1)==m});
+  const faturamento=vendas.reduce((s,v)=>s+v.total,0);
+  const totalDesp=despesas.reduce((s,d)=>s+d.valor,0);
+  const lucro=faturamento-totalDesp;
 
   resumoMensal.innerHTML=`
-    <p>Pix: R$ ${pix.toFixed(2)}</p>
-    <p>Cartão: R$ ${cartao.toFixed(2)}</p>
-    <p>Dinheiro: R$ ${dinheiro.toFixed(2)}</p>
+    <p>Faturamento: R$ ${faturamento.toFixed(2)}</p>
+    <p>Despesas: R$ ${totalDesp.toFixed(2)}</p>
+    <p class="total">Lucro Líquido: R$ ${lucro.toFixed(2)}</p>
   `;
 
-  listaMensal.innerHTML=vendas.map(v=>
-    `<li>${v.data} | ${v.pagamento} | R$ ${v.total.toFixed(2)}</li>`
-  ).join("");
-
-  desenharGrafico(pix,cartao,dinheiro);
+  desenharGrafico([faturamento,totalDesp,lucro]);
 }
-
-function desenharGrafico(pix,cartao,dinheiro){
-  const c=document.getElementById("graficoMensal");
-  const g=c.getContext("2d");
+function desenharGrafico(val){
+  const c=graficoMensal,g=c.getContext("2d");
   g.clearRect(0,0,c.width,c.height);
-
-  const valores=[pix,cartao,dinheiro];
-  const cores=["#2ecc71","#3498db","#f1c40f"];
-  const labels=["Pix","Cartão","Dinheiro"];
-  const max=Math.max(...valores,1);
-
-  valores.forEach((v,i)=>{
+  const labels=["Faturamento","Despesas","Lucro"];
+  const cores=["#2ecc71","#e74c3c","#3498db"];
+  const max=Math.max(...val,1);
+  val.forEach((v,i)=>{
     const h=(v/max)*120;
     g.fillStyle=cores[i];
-    g.fillRect(50+i*80,150-h,40,h);
-    g.fillText(labels[i],50+i*80,170);
+    g.fillRect(50+i*90,160-h,50,h);
+    g.fillText(labels[i],50+i*90,180);
   });
 }
 
-/* ===== PDF ===== */
+/* ========= PDF ========= */
 function pdfFechamento(){
-  const {jsPDF}=window.jspdf;
-  const pdf=new jsPDF();
-  let y=10;
-  pdf.text("FECHAMENTO DE CAIXA",10,y);y+=10;
-  db.vendas.forEach(v=>{
-    pdf.text(`${v.data} | ${v.pagamento} | R$ ${v.total.toFixed(2)}`,10,y);
-    y+=8;
-  });
-  pdf.save("fechamento-caixa.pdf");
+  const pdf=new jspdf.jsPDF();
+  pdf.text("Fechamento de Caixa",10,10);
+  db.vendas.forEach((v,i)=>pdf.text(`${v.data} - R$ ${v.total}`,10,20+i*8));
+  pdf.save("fechamento.pdf");
 }
 function pdfRelatorioMensal(){
-  const {jsPDF}=window.jspdf;
-  const pdf=new jsPDF();
-  let y=10;
-  pdf.text("RELATÓRIO MENSAL",10,y);y+=10;
-  listaMensal.querySelectorAll("li").forEach(li=>{
-    pdf.text(li.innerText,10,y);
-    y+=8;
-  });
+  const pdf=new jspdf.jsPDF();
+  pdf.text("Relatório Mensal",10,10);
+  pdf.text(resumoMensal.innerText,10,20);
   pdf.save("relatorio-mensal.pdf");
 }
 
-/* ===== RENDER ===== */
+/* ========= RENDER ========= */
 function render(){
   statusCaixa.innerText=db.caixa.aberto?"🟢 Caixa aberto":"🔴 Caixa fechado";
   cliente.innerHTML=db.clientes.map(c=>`<option>${c.nome}</option>`).join("");
-  planoCliente.innerHTML=`<option value="">Sem plano</option>`+db.planos.map(p=>`<option>${p.nome}</option>`).join("");
+  clienteAgenda.innerHTML=cliente.innerHTML;
+  planoCliente.innerHTML=db.planos.map(p=>`<option>${p.nome}</option>`).join("");
   tipoPlano.innerHTML=db.produtos.filter(p=>p.tipo==="servico").map(p=>`<option>${p.nome}</option>`).join("");
-  produto.innerHTML=db.produtos.map(p=>`<option value="${p.nome}|${p.valor}|${p.tipo}">${p.nome} - R$ ${p.valor}</option>`).join("");
-  listaClientes.innerHTML=db.clientes.map(c=>`<li>${c.nome} | Plano: ${c.plano||"-"} | Saldo: ${c.saldo||0}</li>`).join("");
-  listaPlanos.innerHTML=db.planos.map(p=>`<li>${p.nome} (${p.qtd}x ${p.tipo})</li>`).join("");
-  listaProdutos.innerHTML=db.produtos.map(p=>`<li>${p.nome} (${p.tipo})</li>`).join("");
-  listaDespesas.innerHTML=db.despesas.map(d=>`<li>${d.desc} - R$ ${d.valor.toFixed(2)}</li>`).join("");
+  produto.innerHTML=db.produtos.map(p=>`<option value="${p.nome}|${p.valor}">${p.nome}</option>`).join("");
+  servicoAgenda.innerHTML=db.produtos.filter(p=>p.tipo==="servico").map(p=>`<option>${p.nome}</option>`).join("");
+  horaAgenda.innerHTML=gerarHorarios15().map(h=>`<option>${h}</option>`).join("");
   renderCarrinho();
 }
 render();
