--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@ th,td{border-bottom:1px solid rgba(255,255,255,.2);padding:6px}
 .ok{color:#2ecc71}
 .warn{color:#f1c40f}
 canvas{background:#111;border-radius:8px;margin-top:10px}
+small{color:#ccc}
 </style>
 </head>
 
@@ -53,7 +54,7 @@ canvas{background:#111;border-radius:8px;margin-top:10px}
 
 <div class="content">
 
-<!-- PDV -->
+<!-- ================= PDV ================= -->
 <div id="pdv" class="section active">
   <h2>PDV / Caixa</h2>
   <p id="statusCaixa"></p>
@@ -83,13 +84,13 @@ canvas{background:#111;border-radius:8px;margin-top:10px}
   <div id="resumoCaixa"></div>
 
   <h4>Conferência de Dinheiro</h4>
-  <input id="dinheiroContado" type="number" placeholder="Dinheiro contado no caixa">
+  <input id="dinheiroContado" type="number" placeholder="Dinheiro contado">
   <p id="resultadoConferencia"></p>
 
   <canvas id="graficoCaixa" width="380" height="200"></canvas>
 </div>
 
-<!-- AGENDA -->
+<!-- ================= AGENDA ================= -->
 <div id="agenda" class="section">
   <h2>Agenda (15 em 15)</h2>
   <input type="date" id="dataAgenda">
@@ -100,7 +101,7 @@ canvas{background:#111;border-radius:8px;margin-top:10px}
   <ul id="listaAgenda"></ul>
 </div>
 
-<!-- CLIENTES -->
+<!-- ================= CLIENTES ================= -->
 <div id="clientes" class="section">
   <h2>Clientes</h2>
   <input id="nomeCliente" placeholder="Nome">
@@ -109,7 +110,7 @@ canvas{background:#111;border-radius:8px;margin-top:10px}
   <ul id="listaClientes"></ul>
 </div>
 
-<!-- PLANOS -->
+<!-- ================= PLANOS ================= -->
 <div id="planos" class="section">
   <h2>Planos</h2>
   <input id="nomePlano" placeholder="Nome">
@@ -120,7 +121,7 @@ canvas{background:#111;border-radius:8px;margin-top:10px}
   <ul id="listaPlanos"></ul>
 </div>
 
-<!-- PRODUTOS -->
+<!-- ================= PRODUTOS ================= -->
 <div id="produtos" class="section">
   <h2>Produtos / Serviços</h2>
   <input id="nomeProd" placeholder="Nome">
@@ -133,21 +134,28 @@ canvas{background:#111;border-radius:8px;margin-top:10px}
   <ul id="listaProdutos"></ul>
 </div>
 
-<!-- DESPESAS -->
+<!-- ================= DESPESAS ================= -->
 <div id="despesas" class="section">
   <h2>Despesas</h2>
   <input id="descDespesa" placeholder="Descrição">
   <input id="valorDespesa" type="number" placeholder="Valor">
+
+  <select id="tipoDespesa">
+    <option value="variavel">Variável</option>
+    <option value="fixa">Fixa mensal</option>
+  </select>
+
   <button onclick="salvarDespesa()">Salvar</button>
   <ul id="listaDespesas"></ul>
 </div>
 
-<!-- RELATÓRIO MENSAL -->
+<!-- ================= RELATÓRIO MENSAL ================= -->
 <div id="mensal" class="section">
   <h2>Relatório Mensal</h2>
   <input type="month" id="mesRelatorio">
   <button onclick="gerarRelatorioMensal()">Gerar</button>
   <button onclick="pdfRelatorioMensal()">📄 PDF</button>
+
   <div id="resumoMensal"></div>
   <canvas id="graficoMensal" width="380" height="200"></canvas>
 </div>
@@ -156,7 +164,9 @@ canvas{background:#111;border-radius:8px;margin-top:10px}
 </div>
 
 <script>
-/* ================= BASE ================= */
+/* =====================================================
+   BASE
+===================================================== */
 function show(id){
   document.querySelectorAll(".section").forEach(s=>s.classList.remove("active"));
   document.getElementById(id).classList.add("active");
@@ -174,22 +184,22 @@ const db = {
 };
 
 let carrinho=[];
-let editCliente=null,editPlano=null,editProduto=null,editDespesa=null;
+let editCliente=null, editPlano=null, editProduto=null, editDespesa=null;
 
-function save(){localStorage.setItem("db",JSON.stringify(db));}
+function save(){ localStorage.setItem("db", JSON.stringify(db)); }
 
-/* ================= AGENDA ================= */
+/* =====================================================
+   AGENDA
+===================================================== */
 function gerarHorarios15(){
   let h=[];
   for(let i=8;i<=20;i++){
-    ["00","15","30","45"].forEach(m=>{
-      h.push(`${String(i).padStart(2,"0")}:${m}`);
-    });
+    ["00","15","30","45"].forEach(m=>h.push(`${String(i).padStart(2,"0")}:${m}`));
   }
   return h;
 }
 function salvarAgendamento(){
-  if(db.agenda.find(a=>a.data===dataAgenda.value&&a.hora===horaAgenda.value))
+  if(db.agenda.find(a=>a.data===dataAgenda.value && a.hora===horaAgenda.value))
     return alert("Horário ocupado");
   db.agenda.push({
     data:dataAgenda.value,
@@ -197,20 +207,22 @@ function salvarAgendamento(){
     cliente:clienteAgenda.value,
     servico:servicoAgenda.value
   });
-  save();renderAgenda();
+  save(); renderAgenda();
 }
 function renderAgenda(){
-  listaAgenda.innerHTML=db.agenda
+  listaAgenda.innerHTML = db.agenda
     .filter(a=>a.data===dataAgenda.value)
     .map(a=>`<li>${a.hora} | ${a.cliente} | ${a.servico}</li>`).join("");
 }
 
-/* ================= CAIXA ================= */
+/* =====================================================
+   CAIXA
+===================================================== */
 function abrirCaixa(){
   db.caixa.aberto=true;
   db.caixa.abertura=+valorAbertura.value||0;
-  db.vendas=[];db.despesas=[];carrinho=[];
-  save();render();
+  db.vendas=[]; db.despesas=[]; carrinho=[];
+  save(); render();
 }
 
 function fecharCaixa(){
@@ -218,23 +230,23 @@ function fecharCaixa(){
 
   db.vendas.forEach(v=>{
     if(v.tipo==="plano"){
-      planos+=v.total;qtdPlanos++;
+      planos+=v.total; qtdPlanos++;
     }else{
       qtdVendas++;
-      if(v.pagamento==="pix")pix+=v.total;
-      if(v.pagamento==="cartao")cartao+=v.total;
-      if(v.pagamento==="dinheiro")dinheiro+=v.total;
+      if(v.pagamento==="pix") pix+=v.total;
+      if(v.pagamento==="cartao") cartao+=v.total;
+      if(v.pagamento==="dinheiro") dinheiro+=v.total;
     }
   });
 
-  const despesas=db.despesas.reduce((s,d)=>s+d.valor,0);
-  const faturamento=pix+cartao+dinheiro+planos;
-  const saldoEsperado=db.caixa.abertura+faturamento-despesas;
+  const despesas = db.despesas.reduce((s,d)=>s+d.valor,0);
+  const faturamento = pix+cartao+dinheiro+planos;
+  const saldoEsperado = db.caixa.abertura + faturamento - despesas;
 
-  resumoCaixa.innerHTML=`
+  resumoCaixa.innerHTML = `
     <h3>Fechamento do Caixa</h3>
     <p>Abertura: R$ ${db.caixa.abertura.toFixed(2)}</p>
-    <p>Faturamento do dia: R$ ${faturamento.toFixed(2)}</p>
+    <p>Faturamento: R$ ${faturamento.toFixed(2)}</p>
     <p>Pix: R$ ${pix.toFixed(2)}</p>
     <p>Cartão: R$ ${cartao.toFixed(2)}</p>
     <p>Dinheiro: R$ ${dinheiro.toFixed(2)}</p>
@@ -243,18 +255,16 @@ function fecharCaixa(){
     <p>Qtd vendas: ${qtdVendas}</p>
     <p>Qtd planos: ${qtdPlanos}</p>
     <p class="total">Saldo esperado: R$ ${saldoEsperado.toFixed(2)}</p>
-    <h4>Vendas do dia</h4>
-    ${db.vendas.map(v=>`<p>${v.data} | ${v.cliente||"—"} | ${v.pagamento} | R$ ${v.total.toFixed(2)}</p>`).join("")}
   `;
 
-  const contado=+dinheiroContado.value||0;
-  const diff=contado-dinheiro;
+  const contado = +dinheiroContado.value||0;
+  const diff = contado - dinheiro;
 
   if(contado===0){
     resultadoConferencia.innerText="Informe o dinheiro contado";
     resultadoConferencia.className="warn";
   }else if(diff===0){
-    resultadoConferencia.innerText="✔ Caixa conferido, valores batem";
+    resultadoConferencia.innerText="✔ Caixa conferido";
     resultadoConferencia.className="ok";
   }else if(diff<0){
     resultadoConferencia.innerText=`❌ Falta R$ ${Math.abs(diff).toFixed(2)}`;
@@ -267,42 +277,17 @@ function fecharCaixa(){
   desenharGraficoCaixa(pix,cartao,dinheiro,despesas,saldoEsperado);
 
   db.caixa.aberto=false;
-  save();render();
+  save(); render();
 }
 
-function desenharGraficoCaixa(pix,cartao,dinheiro,despesas,saldo){
-  const g=graficoCaixa.getContext("2d");
-  g.clearRect(0,0,380,200);
-  const valores=[pix,cartao,dinheiro,despesas,saldo];
-  const labels=["Pix","Cartão","Dinheiro","Despesas","Saldo"];
-  const cores=["#2ecc71","#3498db","#f1c40f","#e74c3c","#9b59b6"];
-  const max=Math.max(...valores,1);
-  valores.forEach((v,i)=>{
-    const h=(v/max)*120;
-    g.fillStyle=cores[i];
-    g.fillRect(40+i*65,160-h,40,h);
-    g.fillText(labels[i],40+i*65,180);
-  });
-}
-
-/* ================= PDV ================= */
+/* =====================================================
+   PDV
+===================================================== */
 function addItem(){
   const [nome,valor,tipo]=produto.value.split("|");
-  const cli=db.clientes.find(c=>c.nome===cliente.value);
-
-  if(cli&&cli.plano&&tipo==="servico"){
-    const plano=db.planos.find(p=>p.nome===cli.plano&&p.tipo===nome);
-    if(!plano)return alert("Serviço não permitido no plano");
-    if(cli.saldo>0){
-      cli.saldo--;save();render();
-      return alert("Plano usado. Saldo: "+cli.saldo);
-    }
-  }
-
   carrinho.push({nome,valor:+valor});
   renderCarrinho();
 }
-
 function finalizarVenda(){
   const total=carrinho.reduce((s,i)=>s+i.valor,0);
   db.vendas.push({
@@ -311,11 +296,10 @@ function finalizarVenda(){
     pagamento:pagamento.value,
     total
   });
-  carrinho=[];save();render();
+  carrinho=[]; save(); render();
 }
-
 function renderCarrinho(){
-  let h="<tr><th>Item</th><th>Valor</th></tr>",s=0;
+  let h="<tr><th>Item</th><th>Valor</th></tr>", s=0;
   carrinho.forEach(i=>{
     h+=`<tr><td>${i.nome}</td><td>R$ ${i.valor.toFixed(2)}</td></tr>`;
     s+=i.valor;
@@ -324,48 +308,68 @@ function renderCarrinho(){
   total.innerText=s.toFixed(2);
 }
 
-/* ================= CRUD ================= */
+/* =====================================================
+   CRUD COM EDIÇÃO REAL
+===================================================== */
 function salvarCliente(){
   const plano=db.planos.find(p=>p.nome===planoCliente.value);
   const obj={nome:nomeCliente.value,plano:plano?plano.nome:null,saldo:plano?plano.qtd:0};
-  editCliente!==null?db.clientes[editCliente]=obj:db.clientes.push(obj);
+
+  if(editCliente!==null) db.clientes[editCliente]=obj;
+  else db.clientes.push(obj);
 
   if(plano){
     db.vendas.push({
       data:new Date().toLocaleString(),
-      cliente:nomeCliente.value,
+      cliente:obj.nome,
       pagamento:"plano",
       total:plano.valor,
       tipo:"plano"
     });
   }
 
-  editCliente=null;save();render();
+  editCliente=null; save(); render();
 }
 
 function salvarPlano(){
   const obj={nome:nomePlano.value,valor:+valorPlano.value,qtd:+qtdPlano.value,tipo:tipoPlano.value};
-  editPlano!==null?db.planos[editPlano]=obj:db.planos.push(obj);
-  editPlano=null;save();render();
+  editPlano!==null ? db.planos[editPlano]=obj : db.planos.push(obj);
+  editPlano=null; save(); render();
 }
 
 function salvarProduto(){
   const obj={nome:nomeProd.value,valor:+valorProd.value,tipo:tipoProd.value};
-  editProduto!==null?db.produtos[editProduto]=obj:db.produtos.push(obj);
-  editProduto=null;save();render();
+  editProduto!==null ? db.produtos[editProduto]=obj : db.produtos.push(obj);
+  editProduto=null; save(); render();
 }
 
 function salvarDespesa(){
-  const obj={desc:descDespesa.value,valor:+valorDespesa.value,data:new Date().toLocaleString()};
-  editDespesa!==null?db.despesas[editDespesa]=obj:db.despesas.push(obj);
-  editDespesa=null;save();render();
+  const obj={
+    desc:descDespesa.value,
+    valor:+valorDespesa.value,
+    tipo:tipoDespesa.value,
+    data:new Date().toLocaleString()
+  };
+  editDespesa!==null ? db.despesas[editDespesa]=obj : db.despesas.push(obj);
+  editDespesa=null; save(); render();
 }
 
-/* ================= RELATÓRIO MENSAL ================= */
+/* =====================================================
+   RELATÓRIO MENSAL (DESPESA FIXA)
+===================================================== */
 function gerarRelatorioMensal(){
   const [ano,m]=mesRelatorio.value.split("-");
-  const vendas=db.vendas.filter(v=>{const d=new Date(v.data);return d.getFullYear()==ano&&(d.getMonth()+1)==m});
-  const despesas=db.despesas.filter(d=>{const dt=new Date(d.data);return dt.getFullYear()==ano&&(dt.getMonth()+1)==m});
+  const vendas=db.vendas.filter(v=>{
+    const d=new Date(v.data);
+    return d.getFullYear()==ano && (d.getMonth()+1)==m;
+  });
+
+  const despesas=db.despesas.filter(d=>{
+    if(d.tipo==="fixa") return true;
+    const dt=new Date(d.data);
+    return dt.getFullYear()==ano && (dt.getMonth()+1)==m;
+  });
+
   const faturamento=vendas.reduce((s,v)=>s+v.total,0);
   const totalDesp=despesas.reduce((s,d)=>s+d.valor,0);
   const lucro=faturamento-totalDesp;
@@ -373,10 +377,28 @@ function gerarRelatorioMensal(){
   resumoMensal.innerHTML=`
     <p>Faturamento: R$ ${faturamento.toFixed(2)}</p>
     <p>Despesas: R$ ${totalDesp.toFixed(2)}</p>
-    <p class="total">Lucro Líquido: R$ ${lucro.toFixed(2)}</p>
+    <p class="total">Lucro líquido: R$ ${lucro.toFixed(2)}</p>
   `;
 
   desenharGraficoMensal(faturamento,totalDesp,lucro);
+}
+
+/* =====================================================
+   GRÁFICOS
+===================================================== */
+function desenharGraficoCaixa(pix,cartao,dinheiro,desp,saldo){
+  const g=graficoCaixa.getContext("2d");
+  g.clearRect(0,0,380,200);
+  const vals=[pix,cartao,dinheiro,desp,saldo];
+  const labels=["Pix","Cartão","Dinheiro","Despesas","Saldo"];
+  const cores=["#2ecc71","#3498db","#f1c40f","#e74c3c","#9b59b6"];
+  const max=Math.max(...vals,1);
+  vals.forEach((v,i)=>{
+    const h=(v/max)*120;
+    g.fillStyle=cores[i];
+    g.fillRect(30+i*65,160-h,40,h);
+    g.fillText(labels[i],30+i*65,180);
+  });
 }
 
 function desenharGraficoMensal(fat,desp,luc){
@@ -394,13 +416,15 @@ function desenharGraficoMensal(fat,desp,luc){
   });
 }
 
-/* ================= PDF ================= */
+/* =====================================================
+   PDF
+===================================================== */
 function pdfFechamento(){
   const {jsPDF}=window.jspdf;
   const pdf=new jsPDF();
   let y=10;
-  pdf.text("FECHAMENTO DE CAIXA",10,y);y+=10;
-  pdf.text("Abertura: R$ "+db.caixa.abertura.toFixed(2),10,y);y+=10;
+  pdf.text("FECHAMENTO DE CAIXA",10,y); y+=10;
+  pdf.text("Abertura: R$ "+db.caixa.abertura.toFixed(2),10,y); y+=10;
   db.vendas.forEach(v=>{
     pdf.text(`${v.data} | ${v.cliente||"—"} | ${v.pagamento} | R$ ${v.total.toFixed(2)}`,10,y);
     y+=8;
@@ -416,17 +440,37 @@ function pdfRelatorioMensal(){
   pdf.save("relatorio-mensal.pdf");
 }
 
-/* ================= RENDER ================= */
+/* =====================================================
+   RENDER
+===================================================== */
 function render(){
   statusCaixa.innerText=db.caixa.aberto?"🟢 Caixa aberto":"🔴 Caixa fechado";
+
   cliente.innerHTML=db.clientes.map(c=>`<option>${c.nome}</option>`).join("");
   clienteAgenda.innerHTML=cliente.innerHTML;
-  planoCliente.innerHTML=`<option value="">Sem plano</option>`+db.planos.map(p=>`<option>${p.nome}</option>`).join("");
-  tipoPlano.innerHTML=db.produtos.filter(p=>p.tipo==="servico").map(p=>`<option>${p.nome}</option>`).join("");
-  produto.innerHTML=db.produtos.map(p=>`<option value="${p.nome}|${p.valor}|${p.tipo}">${p.nome}</option>`).join("");
-  servicoAgenda.innerHTML=db.produtos.filter(p=>p.tipo==="servico").map(p=>`<option>${p.nome}</option>`).join("");
+
+  planoCliente.innerHTML=`<option value="">Sem plano</option>`+
+    db.planos.map(p=>`<option>${p.nome}</option>`).join("");
+
+  tipoPlano.innerHTML=db.produtos
+    .filter(p=>p.tipo==="servico")
+    .map(p=>`<option>${p.nome}</option>`).join("");
+
+  produto.innerHTML=db.produtos
+    .map(p=>`<option value="${p.nome}|${p.valor}|${p.tipo}">${p.nome}</option>`).join("");
+
+  servicoAgenda.innerHTML=db.produtos
+    .filter(p=>p.tipo==="servico")
+    .map(p=>`<option>${p.nome}</option>`).join("");
+
   horaAgenda.innerHTML=gerarHorarios15().map(h=>`<option>${h}</option>`).join("");
-  renderCarrinho();renderAgenda();
+
+  listaDespesas.innerHTML=db.despesas.map((d,i)=>
+    `<li>${d.desc} | R$ ${d.valor.toFixed(2)} | ${d.tipo}</li>`
+  ).join("");
+
+  renderCarrinho();
+  renderAgenda();
 }
 render();
 </script>
